<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/open_calendar_menu_button"
        android:orderInCategory="1"
        android:title="@string/open_calendar_menu_button"
        app:showAsAction="never" />

    <item
        android:id="@+id/enter_workout_menu_button"
        android:orderInCategory="2"
        android:title="@string/enter_workout_menu_button"
        app:showAsAction="never" />

    <item
        android:id="@+id/enter_test_menu_button"
        android:orderInCategory="3"
        android:title="@string/enter_test_menu_button"
        app:showAsAction="never" />
    <item
        android:id="@+id/enter_training_menu_button"
        android:orderInCategory="3"
        android:title="@string/enter_training_menu_button"
        app:showAsAction="never" />
</menu>