<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <include
            layout="@layout/toolbar_main"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="20dp">

            <TextView
                android:id="@+id/title_profile_form_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="16dp"
                android:layout_marginTop="5dp"
                android:text="@string/title_training_info_form_text_view"
                android:textColor="@color/blueTop"
                android:textSize="40sp" />


            <EditText
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/colorPrimaryDark"
                android:hint="@string/heart_fq_rest_edit_text"
                android:id="@+id/heart_fq_rest_input_edit_text"
                android:inputType="numberDecimal" />

            <EditText
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/colorPrimaryDark"
                android:hint="@string/heart_fq_max_edit_text"
                android:id="@+id/heart_fq_max_input_edit_text"
                android:inputType="numberDecimal" />

            <EditText
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/colorPrimaryDark"
                android:hint="@string/blood_pressure_res_edit_text"
                android:id="@+id/blood_pressure_rest_input_edit_text"
                android:inputType="number" />

            <EditText
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/colorPrimaryDark"
                android:hint="@string/blood_pressure_max_edit_text"
                android:id="@+id/blood_pressure_max_input_edit_text"
                android:inputType="numberDecimal" />

            <EditText
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/colorPrimaryDark"
                android:hint="@string/blood_sugar_edit_text"
                android:id="@+id/blood_sugar_input_edit_text"
                android:inputType="numberDecimal" />

            <EditText
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/colorPrimaryDark"
                android:hint="@string/sao2_input_edit_text"
                android:id="@+id/sao2_input_edit_text"
                android:inputType="number" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:background="@color/blueTop"
                android:layout_marginTop="20dp"
                android:paddingLeft="70dp"
                android:paddingRight="70dp"
                android:text="@string/save_trainings_info_button_text"
                android:id="@+id/save_training_button"
                android:onClick="saveTraining"
                android:textColor="#fff" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>