<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <include
            layout="@layout/toolbar_main"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="20dp">

        <TextView
            android:id="@+id/title_profile_form_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="16dp"
            android:layout_marginTop="5dp"
            android:text="@string/title_profile_form_text_view"
            android:textColor="@color/blueTop"
            android:textSize="40sp" />

        <!--start personal info-->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/personal_info_title"
            android:textSize="20sp"
            android:textColor="@color/blueTop"/>

        <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/colorPrimaryDark"
            android:hint="@string/name_input_text"
            android:id="@+id/name_input_edit_text"
            android:inputType="textPersonName" />

        <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/colorPrimaryDark"
            android:hint="Geboorte datum"
            android:id="@+id/dob_input_edit_text"
            android:inputType="date" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="2"
            android:orientation="horizontal"
            android:backgroundTint="@color/colorPrimaryDark">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:id="@+id/sex_text_view"
                android:layout_gravity="center_vertical"
                android:text="Geslacht:"
                android:textSize="18sp"
                android:entries="@array/sex_spinner"
                android:layout_weight="1"/>

            <Spinner
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/sex_spinner"
                android:layout_gravity="center_vertical"
                android:entries="@array/sex_spinner"
                android:textSize="18sp"
                android:textAlignment="textEnd"
                android:layout_weight="1"/>

        </LinearLayout>


        <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/colorPrimaryDark"
            android:hint="@string/weight_edit_text"
            android:id="@+id/weight_input_edit_text"
            android:inputType="number" />

        <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/colorPrimaryDark"
            android:hint="@string/height_edit_text"
            android:id="@+id/height_input_edit_text"
            android:inputType="numberDecimal" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:background="@color/blueTop"
            android:layout_marginTop="20dp"
            android:paddingLeft="70dp"
            android:paddingRight="70dp"
            android:text="@string/save_profile_button_text"
            android:onClick="saveProfile"
            android:textColor="#fff" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>