<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="3">

    <include
        layout="@layout/toolbar_main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/select_training_type_textview"
        android:text="@string/select_training_type_text"
        android:textAlignment="center"
        android:textSize="15sp"
        android:textColor="@color/blueTop"
        android:layout_gravity="center_horizontal" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:weightSum="3">

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:id="@+id/cycle_button"
            android:button="@null"
            android:background="@drawable/cycle"
            android:layout_weight="1"
            android:layout_gravity="center_vertical" />

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:id="@+id/walk_button"
            android:button="@null"
            android:background="@drawable/walk"
            android:layout_weight="1"
            android:layout_gravity="center_vertical" />

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:id="@+id/cardio_button"
            android:button="@null"
            android:background="@drawable/cardio"
            android:layout_weight="1"
            android:layout_gravity="center_vertical" />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:weightSum="3">

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:padding="0dp"
            android:id="@+id/hometrainer_button"
            android:button="@null"
            android:background="@drawable/hometrainer"
            android:layout_weight="1"
            android:layout_gravity="center_vertical" />

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:id="@+id/jog_button"
            android:button="@null"
            android:background="@drawable/jog"
            android:layout_weight="1"
            android:layout_gravity="center_vertical"/>

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:id="@+id/nordic_walking_button"
            android:button="@null"
            android:background="@drawable/nordic_walking"
            android:layout_weight="1"
            android:layout_gravity="center_vertical" />

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/select_training_intensity_textview"
        android:text="@string/select_training_intensity_text"
        android:textAlignment="center"
        android:textSize="15sp"
        android:textColor="@color/blueTop"
        android:layout_gravity="center_horizontal" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2">

        <Spinner
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:id="@+id/intensity_type_spinner"
            android:layout_gravity="center_horizontal"
            android:entries="@array/intensity_type_spinner"/>

        <Spinner
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textAlignment="center"
            android:id="@+id/intensity_amount_spinner"
            android:layout_gravity="center_horizontal"
            android:entries="@array/intensity_amount_spinner"/>
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/select_training_amount_textview"
        android:text="@string/select_training_amount_text"
        android:textAlignment="center"
        android:textSize="15sp"
        android:textColor="@color/blueTop"
        android:layout_gravity="center_horizontal" />

    <Spinner
    android:layout_marginTop="5dp"
    android:layout_marginBottom="5dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/training_amount_spinner"
    android:layout_gravity="center_horizontal"
    android:textAlignment="center"
    android:entries="@array/training_amount_spinner"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="1"
        android:gravity="center|bottom"
        android:orientation="vertical" >

        <ImageButton
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:background="@drawable/save_training_button"
        android:layout_marginBottom="20dp"
        android:onClick="save_training" />
    </LinearLayout>

</LinearLayout>
